# ISD-project-test

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/_bmv080/: CMakeLists.txt
components/_bsec/: CMakeLists.txt  bsec_iaq.c  bsec_integration.c
components/_bsec/include/: bsec_temp_offset_tab_target_board.h
components/bsec/include/: bsec_integration.h
main/: CMakeLists.txt
main/include/: DummyTask.hpp  I2CManager.hpp  sensorControl.hpp
main/include/Lora/: LoRaE5.hpp  Lora_Task.hpp
main/include/polverine/: Structs.h  peripherals.h  polverine_cfg.h  protocol_common.h  status.h
main/include/sensors/TC74/: TC74Sensor.hpp  TC74Task.hpp
main/include/sensors/bme690/: Bme690.hpp  Bme690Task.hpp
main/include/sensors/bmv080/: Bmv080.hpp  Bmv080Task.hpp  bmv080_io.h
main/include/sensors/sps30/: Sps30Sensor.hpp  Sps30Task.hpp
main/include/unused_from_demo/: common_private.h  leds.h  sensorbuffer.h
main/src/: I2CManager.cpp
main/src/Dummy/: DummyTask.cpp
main/src/LoRa/: LoRaE5.cpp  Lora_Task.cpp
main/src/app/: main.cpp  sensorControl.cpp  status.cpp
main/src/sensors/TC74/: TC74Sensor.cpp  TC74Task.cpp
main/src/sensors/bme690/: Bme690.cpp  Bme690Task.cpp
main/src/sensors/bmv080/: Bmv080.cpp  Bmv080Task.cpp  bmv080_io.c
main/src/sensors/sps30/: Sps30Sensor.cpp  Sps30Task.cpp
main/src/unused_from_demo/: leds_main.c  sensorbuffer.c  usb_main.c
